Project medicina_laboral {
  database_type: "PostgreSQL"
  Note: "Esquema actual del repo con tablas conversacionales, avisos, anticipo de certificado y auditoria administrativa base."
}

Table users {
  id bigint [pk]
  name varchar [not null]
  email varchar [not null, unique]
  email_verified_at timestamp
  password varchar [not null]
  is_admin boolean [not null, default: false]
  remember_token varchar
  created_at timestamp
  updated_at timestamp

  Note: "Usuario administrativo autenticable para Filament. Los roles y permisos viven en tablas de Spatie Laravel Permission."
}

Table conversaciones {
  id bigint [pk]
  uuid uuid [not null, unique]
  wa_number varchar [not null]
  canal varchar [not null, default: 'whatsapp']
  tipo_flujo varchar
  estado_actual varchar [not null, default: 'iniciada']
  paso_actual varchar
  activa boolean [not null, default: true]
  cantidad_mensajes_recibidos integer [not null, default: 0]
  cantidad_mensajes_enviados integer [not null, default: 0]
  cantidad_mensajes_validos integer [not null, default: 0]
  cantidad_mensajes_invalidos integer [not null, default: 0]
  cantidad_intentos_actual integer [not null, default: 0]
  cantidad_intentos_totales integer [not null, default: 0]
  ultimo_mensaje_recibido_en timestamp
  ultimo_mensaje_enviado_en timestamp
  primer_umbral_notificado_en timestamp
  segundo_umbral_notificado_en timestamp
  expira_en timestamp
  finalizada_en timestamp
  motivo_finalizacion varchar
  aviso_id bigint
  anticipo_certificado_id bigint
  estado varchar [not null, default: 'esperando_dni']
  dni varchar
  tipo varchar
  metadata json
  created_at timestamp
  updated_at timestamp

  Note: "Tabla real actual. Conviven campos nuevos y legacy; anticipo_certificado_id ya existe en migraciones."
}

Table conversacion_mensajes {
  id bigint [pk]
  uuid uuid [not null, unique]
  conversacion_id bigint [not null]
  direccion varchar(10) [not null]
  provider_message_id varchar
  tipo_mensaje varchar [not null, default: 'text']
  step_key varchar
  contenido_texto text
  es_valido boolean
  motivo_invalidez varchar
  message_key varchar
  template_name varchar
  payload_crudo json
  metadata json
  created_at timestamp
  updated_at timestamp
}

Table conversacion_eventos {
  id bigint [pk]
  uuid uuid [not null, unique]
  conversacion_id bigint [not null]
  tipo_evento varchar [not null]
  step_key varchar
  descripcion text
  codigo varchar
  metadata json
  created_at timestamp
  updated_at timestamp
}

Table avisos {
  id bigint [pk]
  conversacion_id bigint
  dni varchar
  nombre_completo varchar
  legajo varchar
  sede varchar
  jornada_laboral varchar
  tipo varchar [not null]
  estado varchar [not null, default: 'inicial']
  tipo_ausentismo varchar
  fecha_inicio date
  fecha_fin date
  cantidad_dias integer
  certificado_base64 text
  motivo text
  domicilio_circunstancial varchar
  observaciones text
  wa_number varchar
  metadata json
  created_at timestamp
  updated_at timestamp
}

Ref: conversacion_mensajes.conversacion_id > conversaciones.id
Ref: conversacion_eventos.conversacion_id > conversaciones.id
Ref: conversaciones.aviso_id > avisos.id
Ref: avisos.conversacion_id > conversaciones.id

Table anticipos_certificado {
  id bigint [pk]
  uuid uuid [not null, unique]
  numero_anticipo varchar [unique]
  conversacion_id bigint [not null]
  aviso_id bigint [not null]
  wa_number varchar
  nombre_completo varchar
  legajo varchar
  sede varchar
  jornada_laboral varchar
  tipo_certificado varchar [not null]
  estado varchar [not null, default: 'inicial']
  observaciones text
  registrado_en timestamp
  metadata json
  created_at timestamp
  updated_at timestamp

  Note: "Tabla real actual para el alta del anticipo."
}

Table anticipo_certificado_archivos {
  id bigint [pk]
  uuid uuid [not null, unique]
  anticipo_certificado_id bigint [not null]
  conversacion_id bigint [not null]
  provider_file_id varchar
  nombre_original varchar
  mime_type varchar
  extension varchar
  size_bytes bigint
  storage_disk varchar
  storage_path varchar
  hash_archivo varchar
  estado_validacion varchar [not null, default: 'aceptado']
  motivo_rechazo varchar
  metadata json
  created_at timestamp
  updated_at timestamp

  Note: "Persistencia real de metadata asociada al anticipo. El storage binario definitivo sigue pendiente."
}

Table anticipo_certificado_aviso {
  id bigint [pk]
  anticipo_certificado_id bigint [not null]
  aviso_id bigint [not null]
  origen varchar [not null, default: 'conversacion']
  estado_vinculo varchar [not null, default: 'activo']
  metadata json
  created_at timestamp
  updated_at timestamp

  indexes {
    (anticipo_certificado_id, aviso_id) [unique, name: 'anticipo_certificado_aviso_unique']
    anticipo_certificado_id [name: 'anticipo_certificado_aviso_anticipo_idx']
    aviso_id [name: 'anticipo_certificado_aviso_aviso_idx']
    estado_vinculo [name: 'anticipo_certificado_aviso_estado_idx']
  }

  Note: "Relacion N a N entre anticipos/certificados y avisos. aviso_id en anticipos_certificado se conserva como compatibilidad temporal."
}

Table auditoria_administrativa {
  id bigint [pk]
  actor_user_id bigint
  action varchar [not null]
  origin varchar [not null]
  auditable_type varchar
  auditable_id bigint
  before_values json
  after_values json
  metadata json
  created_at timestamp [not null]

  indexes {
    actor_user_id [name: 'auditoria_administrativa_actor_user_id_foreign']
    (auditable_type, auditable_id) [name: 'auditoria_admin_auditable_idx']
    action [name: 'auditoria_admin_action_idx']
    origin [name: 'auditoria_admin_origin_idx']
    created_at [name: 'auditoria_admin_created_at_idx']
  }

  Note: "Eventos de auditoria administrativa. No guarda contenido medico, binarios, payloads completos ni cuerpos de mensajes."
}

Ref: anticipos_certificado.conversacion_id > conversaciones.id
Ref: anticipos_certificado.aviso_id > avisos.id
Ref: anticipo_certificado_archivos.anticipo_certificado_id > anticipos_certificado.id
Ref: anticipo_certificado_archivos.conversacion_id > conversaciones.id
Ref: conversaciones.anticipo_certificado_id > anticipos_certificado.id
Ref: anticipo_certificado_aviso.anticipo_certificado_id > anticipos_certificado.id
Ref: anticipo_certificado_aviso.aviso_id > avisos.id
Ref: auditoria_administrativa.actor_user_id > users.id [delete: set null]
